# Boogu-Image-Gradio

./: .gitignore  README.md  pyproject.toml  run.sh  serve.sh  setup.sh  stop.sh
app/: __init__.py  config.py  generate.py  models.py  pipelines.py  ui.py
docs/specs/2026-06-17-boogu-image-gradio/: spec.claude.md  spec.human.md
tests/: test_config.py  test_generate.py  test_models.py
